--- a/component-test/build.gradle
+++ b/component-test/build.gradle
@@ -20,11 +20,11 @@ apply from: '../shared.gradle'
 
 dependencies {
     compile(
-            [group: 'io.mifos.office', name: 'api', version: project.version],
-            [group: 'io.mifos.office', name: 'service', version: project.version],
-            [group: 'io.mifos.anubis', name: 'test', version: versions.frameworkanubis],
-            [group: 'io.mifos.core', name: 'api', version: versions.frameworkapi],
-            [group: 'io.mifos.core', name: 'test', version: versions.frameworktest],
+            [group: 'org.apache.fineract.cn.office', name: 'api', version: project.version],
+            [group: 'org.apache.fineract.cn.office', name: 'service', version: project.version],
+            [group: 'org.apache.fineract.cn.anubis', name: 'test', version: versions.frameworkanubis],
+            [group: 'org.apache.fineract.cn', name: 'api', version: versions.frameworkapi],
+            [group: 'org.apache.fineract.cn', name: 'test', version: versions.frameworktest],
             [group: 'org.springframework.boot', name: 'spring-boot-starter-test']
     )
 }
