--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
       enabled: false
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/seshat
+    url: jdbc:postgresql://localhost:5432/playground
     username: postgres
     password: postgres
 
