--- a/shared.gradle
+++ b/shared.gradle
@@ -19,14 +19,14 @@ group 'org.apache.fineract.cn.office'
 version '0.1.0-BUILD-SNAPSHOT'
 
 ext.versions = [
-        frameworkapi : '0.1.0-BUILD-SNAPSHOT',
-        frameworklang : '0.1.0-BUILD-SNAPSHOT',
-        frameworkasync : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcassandra : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcommand : '0.1.0-BUILD-SNAPSHOT',
-        frameworktest: '0.1.0-BUILD-SNAPSHOT',
-        frameworkanubis: '0.1.0-BUILD-SNAPSHOT',
-        validator  : '5.3.0.Final'
+        frameworkapi      : '0.1.0-BUILD-SNAPSHOT',
+        frameworklang     : '0.1.0-BUILD-SNAPSHOT',
+        frameworkasync    : '0.1.0-BUILD-SNAPSHOT',
+        frameworkcassandra: '0.1.0-BUILD-SNAPSHOT',
+        frameworkcommand  : '0.1.0-BUILD-SNAPSHOT',
+        frameworktest     : '0.1.0-BUILD-SNAPSHOT',
+        frameworkanubis   : '0.1.0-BUILD-SNAPSHOT',
+        validator         : '5.3.0.Final',
 ]
 
 apply plugin: 'java'
@@ -64,7 +64,7 @@ ext['spring-data-releasetrain.version'] = 'Gosling-SR2A'
 dependencies {
     compile(
             [group: 'com.google.code.findbugs', name: 'jsr305'],
-            [group: 'org.apache.fineract.cn', name: 'postgresql', version:'0.1.0-BUILD-SNAPSHOT'],
+            [group: 'org.apache.fineract.cn', name: 'postgresql', version: '0.1.0-BUILD-SNAPSHOT'],
             [group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4']
     )
 
