--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -28,6 +28,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    homePageUrl: "http://${eureka.hostname}:2023/office/v1/"
 
 server:
   port: 2023
