--- a/shared.gradle
+++ b/shared.gradle
@@ -88,7 +88,7 @@ artifactory {
         }
     }
 }
-artifactoryPublish.dependsOn('clean','publishToMavenLocal')
+artifactoryPublish.dependsOn('publishToMavenLocal')
 
 license {
     header rootProject.file('../HEADER')
