--- a/service/build.gradle
+++ b/service/build.gradle
@@ -54,7 +54,7 @@ dependencies {
             [group: 'org.apache.fineract.cn', name: 'lang', version: versions.frameworklang],
             [group: 'org.apache.fineract.cn', name: 'async', version: versions.frameworkasync],
             [group: 'org.apache.fineract.cn', name: 'cassandra', version: versions.frameworkcassandra],
-            [group: 'org.apache.fineract.cn', name: 'postgresql', version:'0.1.0-BUILD-SNAPSHOT'],
+            [group: 'org.apache.fineract.cn', name: 'postgresql', version:'0.1.x-SNAPSHOT'],
             [group: 'org.apache.fineract.cn', name: 'command', version: versions.frameworkcommand],
             [group: 'io.netty', name: 'netty-all', version: '4.1.39.Final'],
             [group: 'io.netty', name: 'netty-transport-native-epoll', version: '4.1.39.Final']
