--- a/shared.gradle
+++ b/shared.gradle
@@ -16,17 +16,18 @@
  */
 
 group 'org.apache.fineract.cn.office'
-version '0.1.0-BUILD-SNAPSHOT'
+version 'spring_boot_2-SNAPSHOT'
 
 ext.versions = [
-        frameworkapi      : '0.1.0-BUILD-SNAPSHOT',
-        frameworklang     : '0.1.0-BUILD-SNAPSHOT',
-        frameworkasync    : '0.1.0-BUILD-SNAPSHOT',
-        frameworkcassandra: '0.1.0-BUILD-SNAPSHOT',
-        frameworkcommand  : '0.1.0-BUILD-SNAPSHOT',
-        frameworktest     : '0.1.0-BUILD-SNAPSHOT',
-        frameworkanubis   : '0.1.0-BUILD-SNAPSHOT',
-        validator         : '5.3.0.Final',
+        frameworkapi      : 'spring_boot_2-SNAPSHOT',
+        frameworklang     : 'spring_boot_2-SNAPSHOT',
+        frameworkasync    : 'spring_boot_2-SNAPSHOT',
+        frameworkcassandra: 'spring_boot_2-SNAPSHOT',
+        frameworkcommand  : 'spring_boot_2-SNAPSHOT',
+        frameworktest     : 'spring_boot_2-SNAPSHOT',
+        frameworkanubis   : 'spring_boot_2-SNAPSHOT',
+        frameworkpostgres : 'spring_boot_2-SNAPSHOT',
+        validator         : '6.1.4.Final',
 ]
 
 tasks.withType(JavaCompile) {
@@ -46,8 +47,8 @@ configurations {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.spring.platform:platform-bom:Athens-RELEASE'
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR1'
+        mavenBom 'io.spring.platform:platform-bom:Cairo-SR8'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3'
     }
 }
 
@@ -60,8 +61,8 @@ ext['spring-data-releasetrain.version'] = 'Gosling-SR2A'
 dependencies {
     compile(
             [group: 'com.google.code.findbugs', name: 'jsr305'],
-            [group: 'org.apache.fineract.cn', name: 'postgresql', version: '0.1.0-BUILD-SNAPSHOT'],
-            [group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4']
+            [group: 'org.apache.fineract.cn', name: 'postgresql', version: 'spring_boot_2-SNAPSHOT'],
+            [group: 'org.postgresql', name: 'postgresql', version: '42.2.12']
     )
 
     testCompile(
@@ -114,6 +115,10 @@ rat {
             "**/build/**",
             "gradlew",
             "gradlew.bat",
-            "README.md"
+            "README.md",
+            ".project",
+            ".classpath",
+            ".settings/**",
+            "**/bin/**"
     ]
 }
