--- a/shared.gradle
+++ b/shared.gradle
@@ -27,7 +27,7 @@ ext.versions = [
         frameworktest     : 'spring_boot_2-SNAPSHOT',
         frameworkanubis   : 'spring_boot_2-SNAPSHOT',
         frameworkpostgres : 'spring_boot_2-SNAPSHOT',
-        validator         : '6.1.4.Final',
+        hibernatevalidator: '7.0.0.Final',
 ]
 
 tasks.withType(JavaCompile) {
@@ -47,20 +47,13 @@ configurations {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.spring.platform:platform-bom:Cairo-SR8'
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR9'
     }
 }
 
-// override certain dependency provided by Spring platform using newer releases
-ext['cassandra.version'] = '3.6'
-ext['cassandra-driver.version'] = '3.1.2'
-ext['activemq.version'] = '5.13.2'
-ext['spring-data-releasetrain.version'] = 'Gosling-SR2A'
-
 dependencies {
     compile(
-            [group: 'com.google.code.findbugs', name: 'jsr305'],
+            [group: 'com.github.spotbugs', name: 'spotbugs', version: '4.2.0'],
             [group: 'org.apache.fineract.cn', name: 'postgresql', version: 'spring_boot_2-SNAPSHOT'],
             [group: 'org.postgresql', name: 'postgresql', version: '42.2.12']
     )
