--- a/service/build.gradle
+++ b/service/build.gradle
@@ -45,7 +45,7 @@ bootRepackage {
 dependencies {
     compile(
             [group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'],
-            [group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka'],
+            [group: 'org.springframework.boot', name: 'spring-boot-starter-web'],
             [group: 'org.springframework.boot', name: 'spring-boot-starter-jetty'],
             [group: 'org.hibernate', name: 'hibernate-validator', version: versions.validator],
             [group: 'org.apache.fineract.cn.office', name: 'api', version: project.version],
